Bug fixes and changes:  - Updating Powershell to include Reflective Assemblies  - Tweaking the command response box  - Moving JS and CSS to their own files and out of the main page  - Squashing down the Powershell code and removing some debugging

--- a/FudgeC2/ServerApp/static/core-style.css
+++ b/FudgeC2/ServerApp/static/core-style.css
@@ -24,3 +24,12 @@ Search filters CSS
 .results tr[visible='false'],
 .no-result{ display:none; }
 .results tr[visible='true']{ display:table-row; }
+
+.modal-full {
+    min-width: 85%;
+    margin-left: auto;
+}
+
+.modal-full .modal-content {
+    min-height: 100vh;
+}
